{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 60,
  "lineage": "c6cbff54-aedf-0202-0cba-125b1fb9d4f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ctd_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a10f2bebf6e0f305",
            "owner_id": "613218033618",
            "tags": {
              "Name": "ctd-ig"
            },
            "vpc_id": "vpc-07755bd50208f493c"
          },
          "dependencies": [
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ctd_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04cda883ad8cc4c41",
            "owner_id": "613218033618",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a10f2bebf6e0f305",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-07755bd50208f493c"
          },
          "dependencies": [
            "aws_internet_gateway.ctd_ig",
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ctd_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c17a109cb784fdf",
            "route_table_id": "rtb-04cda883ad8cc4c41",
            "subnet_id": "subnet-0f0b654e91cb61d91"
          },
          "dependencies": [
            "aws_internet_gateway.ctd_ig",
            "aws_route_table.ctd_rt",
            "aws_subnet.atd_sn",
            "aws_vpc.ctd_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0097e93e8fb995d7d",
            "route_table_id": "rtb-04cda883ad8cc4c41",
            "subnet_id": "subnet-09fb260a2c1f62bec"
          },
          "dependencies": [
            "aws_internet_gateway.ctd_ig",
            "aws_route_table.ctd_rt",
            "aws_subnet.atd_sn",
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctd-cluster-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613218033618:security-group/sg-08254f524461672d0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08254f524461672d0",
            "ingress": [],
            "name": "ctd-cluster-sg",
            "name_prefix": null,
            "owner_id": "613218033618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctd-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07755bd50208f493c"
          },
          "dependencies": [
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ctd-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "161.163.44.8/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-161824613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08254f524461672d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.ctd-cluster-sg",
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "atd_sn",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613218033618:subnet/subnet-0f0b654e91cb61d91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f0b654e91cb61d91",
            "map_public_ip_on_launch": false,
            "owner_id": "613218033618",
            "tags": {
              "Name": "terraform-eks-ctd-node",
              "kubernetes.io/cluster/coding-task-devops": "shared"
            },
            "vpc_id": "vpc-07755bd50208f493c"
          },
          "dependencies": [
            "aws_vpc.ctd_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613218033618:subnet/subnet-09fb260a2c1f62bec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09fb260a2c1f62bec",
            "map_public_ip_on_launch": false,
            "owner_id": "613218033618",
            "tags": {
              "Name": "terraform-eks-ctd-node",
              "kubernetes.io/cluster/coding-task-devops": "shared"
            },
            "vpc_id": "vpc-07755bd50208f493c"
          },
          "dependencies": [
            "aws_vpc.ctd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ctd_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613218033618:vpc/vpc-07755bd50208f493c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f92ba37d81fb3ada",
            "default_route_table_id": "rtb-0efb91a3dbde046e9",
            "default_security_group_id": "sg-081d2c1fe856a2687",
            "dhcp_options_id": "dopt-fbce1c81",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07755bd50208f493c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0efb91a3dbde046e9",
            "owner_id": "613218033618",
            "tags": {
              "Name": "CTD VPC"
            }
          }
        }
      ]
    }
  ]
}